# phi_packages

./: README.md  commands.txt  requierments.txt  rvizcfg.rviz
autonomous_explore/: package.xml  setup.cfg  setup.py
autonomous_explore/autonomous_explore/: MapSearch.py  autonomous_explore_node.py
autonomous_explore/autonomous_explore/__pycache__/: MapSearch.min-11.py310.1.nbc  MapSearch.min-11.py310.nbi  MapSearch.min-12.py310.1.nbc  MapSearch.min-12.py310.nbi
autonomous_explore/config/: detect_cylinders_params.yaml  detect_parking_params.yaml  detect_rings_params.yaml
autonomous_explore/launch/: detectors_launch.yaml
circle_3d/: CMakeLists.txt  package.xml
circle_3d/circle_3d_module/: lsq_fit.py  rviz_markers.py  torch_fit.py
circle_3d/circle_3d_module/__pycache__/: lsq_fit.fit_plane-64.py310.1.nbc  (+7 more)
circle_3d/scripts/: torch_fit.py
connected_segmentation/: CMakeLists.txt  package.xml
connected_segmentation/launch/: test.yaml
connected_segmentation/msg/: LabeledPointCloud2.msg
connected_segmentation/scripts/: connected_segmentation_script.py
connected_segmentation/src/: connected_segmentation_node.cpp
detect_cylinders/: package.xml  setup.cfg  setup.py
detect_cylinders/detect_cylinders/: detect_cyliders_script.py
detect_parking/: package.xml  setup.cfg  setup.py
detect_parking/detect_parking/: detect_parking_script.py
detect_people/: package.xml  setup.cfg  setup.py
detect_people/detect_people/: detect_people_script.py
detect_rings/: package.xml  setup.cfg  setup.py
detect_rings/detect_rings/: detect_rings_script.py
